fix dark mode styles

--- a/src/assets/less/dark.less
+++ b/src/assets/less/dark.less
@@ -5,6 +5,7 @@
 @media only screen and (min-width: 0rem) {
     :root {
         --dark: #082032;
+        --darkBreaker: rgba(0, 0, 0, 0.3);
         --medium: #2c394b;
         --accent: #334756;
         --bodyTextColorWhite: #fafbfc;
@@ -104,5 +105,221 @@
     }
     #dark-mode-toggle:hover {
         cursor: pointer;
+    }
+}
+
+/* Homepage Hero */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #hero-1621 .cs-item {
+        background-color: var(--medium);
+    }
+    body.dark-mode #hero-1621 .cs-icon {
+        filter: brightness(0) invert(1);
+    }
+    body.dark-mode #hero-1621 .cs-h3,
+    body.dark-mode #hero-1621 .cs-item-text {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #hero-1621 .cs-item-text {
+        opacity: 0.8;
+    }
+    body.dark-mode #hero-1621 .cs-background:before {
+        opacity: 0.9;
+    }
+}
+
+/* Homepage How it Works */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #sbs-523 .cs-title,
+    body.dark-mode #sbs-523 .cs-text {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #sbs-523 .cs-text {
+        opacity: 0.8;
+    }
+    body.dark-mode #sbs-523 .cs-image-group:before {
+        background-color: var(--secondary);
+        opacity: 0.3;
+    }
+    body.dark-mode #sbs-523 .cs-picture-small {
+        border-color: var(--dark);
+    }
+}
+
+/* Homepage Steps */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #steps-1172 .cs-title,
+    body.dark-mode #steps-1172 .cs-text,
+    body.dark-mode #steps-1172 .cs-item-text,
+    body.dark-mode #steps-1172 .cs-h3 {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #steps-1172 .cs-text,
+    body.dark-mode #steps-1172 .cs-item-text {
+        opacity: 0.8;
+    }
+}
+
+/* Homepage Why Choose Us */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #why-choose-1657 {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    body.dark-mode #why-choose-1657 .cs-title,
+    body.dark-mode #why-choose-1657 .cs-li-text,
+    body.dark-mode #why-choose-1657 .cs-review {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #why-choose-1657 .cs-li-text {
+        opacity: 0.8;
+    }
+    body.dark-mode #why-choose-1657 .cs-wrapper:before {
+        background-color: var(--dark);
+    }
+}
+
+/* Homepage Side By Side Reverse */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #sbsr-1309 .cs-title,
+    body.dark-mode #sbsr-1309 .cs-text {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #sbsr-1309 .cs-link {
+        color: var(--secondaryLight);
+    }
+    body.dark-mode #sbsr-1309 .cs-text {
+        opacity: 0.8;
+    }
+    body.dark-mode #sbsr-1309 .cs-box {
+        background-color: var(--medium);
+    }
+}
+
+/* Homepage FAQ */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #faq-351 {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+    body.dark-mode #faq-351 .cs-picture {
+        border-color: var(--accent);
+    }
+    body.dark-mode #faq-351 .cs-topper {
+        color: var(--primaryLight);
+    }
+    body.dark-mode #faq-351 .cs-title,
+    body.dark-mode #faq-351 .cs-item-p {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #faq-351 .cs-faq-item {
+        border-color: rgba(255, 255, 255, 0.2);
+    }
+    body.dark-mode #faq-351 .cs-faq-item.active {
+        border-color: var(--primaryLight);
+    }
+    body.dark-mode #faq-351 .cs-faq-item.active .cs-button {
+        color: var(--primaryLight);
+    }
+    body.dark-mode #faq-351 .cs-faq-item.active .cs-button:before,
+    body.dark-mode #faq-351 .cs-faq-item.active .cs-button:after {
+        background-color: var(--primaryLight);
+    }
+    body.dark-mode #faq-351 .cs-button {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #faq-351 .cs-button:before,
+    body.dark-mode #faq-351 .cs-button:after {
+        background-color: var(--bodyTextColorWhite);
+    }
+}
+
+  /* Homepage Services */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #services-1644 .cs-title,
+    body.dark-mode #services-1644 .cs-text,
+    body.dark-mode #services-1644 .cs-h2,
+    body.dark-mode #services-1644 .cs-item-text {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #services-1644 .cs-text,
+    body.dark-mode #services-1644 .cs-item-text {
+        opacity: 0.8;
+    }
+}
+
+/* Homepage Services CS Content */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #cs-content-829 .cs-title,
+    body.dark-mode #cs-content-829 .cs-text,
+    body.dark-mode #cs-content-829 .cs-h3,
+    body.dark-mode #cs-content-829 .cs-item-text {
+        color: var(--bodyTextColorWhite);
+    }
+}
+
+/* Homepage Events */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #events-1928 {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+    body.dark-mode #events-1928 .cs-h3,
+    body.dark-mode #events-1928 .cs-time,
+    body.dark-mode #events-1928 .cs-title,
+    body.dark-mode #events-1928 .cs-date,
+    body.dark-mode #events-1928 strong {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #events-1928 .cs-date:before {
+        background-color: var(--accent);
+    }
+    body.dark-mode #events-1928 .cs-time {
+        opacity: 0.8;
+    }
+    body.dark-mode #events-1928 .cs-picture {
+        border-color: var(--accent);
+    }
+    body.dark-mode #events-1928 .cs-item {
+        background-color: var(--medium);
+    }
+    body.dark-mode #events-1928 .cs-item:hover .cs-h3 {
+        color: var(--secondary);
+    }
+    body.dark-mode #events-1928 .cs-graphic3,
+    body.dark-mode #events-1928 .cs-graphic4 {
+        opacity: 0.02;
+    }
+    body.dark-mode #events-1928 .cs-button-solid {
+        color: #fff;
+        border-color: #fff;
+    }
+}
+
+/* Tabbed Gallery */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #gallery-974 .cs-title,
+    body.dark-mode #gallery-974 .cs-button {
+        color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #gallery-974 .cs-button.cs-active {
+        color: var(--primary);
+    }
+}
+
+/* Regular Gallery */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #gallery-973 .cs-title,
+    body.dark-mode #gallery-973 .cs-text {
+        color: var(--bodyTextColorWhite);
+    }
+}
+
+/* Homepage Blog */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #blog-1701 .cs-title,
+    body.dark-mode #blog-1701 .cs-h3,
+    body.dark-mode #blog-1701 .cs-desc {
+    color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #blog-1701 .cs-desc {
+    opacity: 0.8;
     }
 }
